# Robot_arm_firmware-

./: Cargo.toml  README.md  log.md
.cargo/: config.toml
src/: config.rs  factories.rs  halfduplex.rs  main.rs  utils.rs
src/control/: LimitSwitch.rs  command_executor.rs  command_parser.rs  endstops.rs  joint.rs  mod.rs  motor.rs  parts.rs  pid.rs  utils.rs
src/control/stepgen/: mod.rs  stepgen.rs
src/drivers/: AS6500.rs  PCF.rs  TCA.rs  mod.rs  tmc2209.rs
