[package]
name = "Robot-arm-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

rtic = { version = "2.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0", features = ["cortex-m-systick"] }
# panic-halt = "0.2"
cortex-m-semihosting = "0.5"
tmc2209 = "=0.2.2"
stm32f1xx-hal = { version = "0.11.0", features = ["stm32f103", "medium"] }
heapless = "0.9.1"
nb = "1.0" 


rtt-target = { version = "0.6.1"}
panic-rtt-target = { version = "0.2.0" }
embedded-hal = "1.0.0"
rtic-sync = "1.4.0"
libm = "0.2.15"
serde = {version = "1", default-features = false, features = ["derive"] }
postcard = {version = "1", default_features = false}
crc-any = "2.5.0"
embedded-io = "0.7.1"


[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"

